--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,5 @@
 # These are supported funding model platforms
 
-github: timlrx
+github: geauxweisbeck4
+ko_fi: geauxweisbeck4
+patreon: geauxweisbeck4
