--- a/package.json
+++ b/package.json
@@ -16,13 +16,18 @@
     "@next/bundle-analyzer": "14.2.3",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.12",
+    "algoliasearch": "^4.24.0",
     "autoprefixer": "^10.4.13",
+    "clsx": "^2.1.1",
     "contentlayer2": "0.4.6",
     "esbuild": "0.20.2",
+    "framer-motion": "^11.3.21",
     "github-slugger": "^2.0.0",
     "gray-matter": "^4.0.2",
     "hast-util-from-html-isomorphic": "^2.0.0",
     "image-size": "1.0.0",
+    "litlyx-js": "^1.0.3",
+    "lucide-react": "^0.419.0",
     "next": "14.2.3",
     "next-contentlayer2": "0.4.6",
     "next-themes": "^0.3.0",
@@ -41,7 +46,9 @@
     "remark-gfm": "^4.0.0",
     "remark-github-blockquote-alert": "^1.2.1",
     "remark-math": "^6.0.0",
+    "tailwind-merge": "^2.4.0",
     "tailwindcss": "^3.4.3",
+    "tailwindcss-animate": "^1.0.7",
     "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
