--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "image-size": "1.0.0",
     "litlyx-js": "^1.0.3",
     "lucide-react": "^0.419.0",
-    "next": "14.2.3",
+    "next": "^14.2.5",
     "next-contentlayer2": "0.4.6",
     "next-themes": "^0.3.0",
     "pliny": "0.2.1",
